--- a/roba_flutter/pubspec.yaml
+++ b/roba_flutter/pubspec.yaml
@@ -58,9 +58,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - Assets\travel icon.jpg
+  - Assets\music.png
+  - Assets\art.jpg
+  - Assets\food.jpg
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
